--- a/css/videos.css
+++ b/css/videos.css
@@ -1,353 +1,354 @@
 /* ========== HEADER ========== */
 
 .header {
-    min-height: 80px;
-    background-color: var(--main-clr);
-    background-image: url(../Images/Wigglie\ thing.png);
-    background-size: cover;
-    padding: 20px 20px 20px 0;
-    position: sticky;
-    top: 0;
-    z-index: 1;
-    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+  min-height: 80px;
+  background-color: var(--main-clr);
+  background-image: url(../Images/Wigglie\ thing.png);
+  background-size: cover;
+  padding: 20px 20px 20px 0;
+  position: sticky;
+  top: 0;
+  z-index: 1;
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
 
 .nav {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .logo-container {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .logo-container .sidebar-button {
-    font-size: 2rem;
-    margin: 0 0 0 1.5rem;
+  font-size: 2rem;
+  margin: 0 0 0 1.5rem;
 }
 
 .logo-container .logo {
-    height: 40px;
-    display: flex;
-    align-items: center;
+  height: 40px;
+  display: flex;
+  align-items: center;
 }
 
 .logo a img {
-    vertical-align: bottom;
+  vertical-align: bottom;
 }
 
 .nav-items-div {
-    display: flex;
-    flex-grow: 2;
+  display: flex;
+  flex-grow: 2;
 }
 
 .nav-list {
-    display: flex;
-    align-items: center;
-    flex-direction: row;
+  display: flex;
+  align-items: center;
+  flex-direction: row;
 }
 
 .nav-list .item {
-    margin: 0 20px;
-    padding: 5px;
-    font-size: 15px;
-    list-style: none;
+  margin: 0 20px;
+  padding: 5px;
+  font-size: 15px;
+  list-style: none;
 }
 
-.nav-list .item>a {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: bold;
-    border-bottom: 3px solid transparent;
+.nav-list .item > a {
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
+  border-bottom: 3px solid transparent;
 }
 
-.nav-list .item>a:hover {
-    padding-bottom: 5px;
-    border-bottom: 3px solid var(--sec-clr);
+.nav-list .item > a:hover {
+  padding-bottom: 5px;
+  border-bottom: 3px solid var(--sec-clr);
 }
 
 .search-bar {
-    display: flex;
-    position: relative;
-    width: 35%;
+  display: flex;
+  position: relative;
+  width: 35%;
 }
 
 .search-bar .search-bar-input {
-    flex-grow: 1;
-    outline: none;
-    padding: 10px;
-    background-color: var(--off-main-clr);
-    border: 2px solid var(--sec-clr);
-    border-radius: 3px;
+  flex-grow: 1;
+  outline: none;
+  padding: 10px;
+  background-color: var(--off-main-clr);
+  border: 2px solid var(--sec-clr);
+  border-radius: 3px;
 }
 
 .search-bar .search-bar-input::-webkit-search-cancel-button {
-    display: none;
+  display: none;
 }
 
 .search-bar .search-bar-icon {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 10px;
-    outline: none;
-    border: none;
-    background: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  outline: none;
+  border: none;
+  background: none;
 }
 
 .search-bar .search-bar-icon:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .search-bar .search-bar-icon ion-icon {
-    font-size: 1.5rem;
+  font-size: 1.5rem;
 }
 
 .profile {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: .75rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.75rem;
 }
 
 .profile img {
-    width: 35px;
-    height: 35px;
-    border-radius: 50%;
-    border: 1px solid var(--sec-clr);
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  border: 1px solid var(--sec-clr);
 }
 
 .profile ion-icon {
-    color: var(--sec-clr);
+  color: var(--sec-clr);
 }
 
 .profile ion-icon:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
-
 /* ============================== SIDEBAR ============================== */
-
 
 /* ========== SIDEBAR SEARCH ========== */
 
 .sidebar-search {
-    display: none;
-    padding: 20px;
+  display: none;
+  padding: 20px;
 }
 
 .sidebar-search .search-bar-input {
-    flex-grow: 1;
-    outline: none;
-    padding: 10px;
-    background-color: var(--off-main-clr);
-    border: 2px solid white;
-    border-radius: 3px;
+  flex-grow: 1;
+  outline: none;
+  padding: 10px;
+  background-color: var(--off-main-clr);
+  border: 2px solid white;
+  border-radius: 3px;
 }
 
 .sidebar-search .search-bar-input::-webkit-search-cancel-button {
-    display: none;
+  display: none;
 }
 
 .sidebar-search .search-bar-icon {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 10px;
-    outline: none;
-    border: none;
-    background: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  outline: none;
+  border: none;
+  background: none;
 }
 
 .sidebar-search .search-bar-icon:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .sidebar-search .search-bar-icon ion-icon {
-    font-size: 1.5rem;
+  font-size: 1.5rem;
 }
-
 
 /* ========== MAIN ========== */
 
 main {
-    background-color: var(--off-main-clr);
-}
-
-.content {
-    display: grid;
-    grid-template-columns: 1.5fr 4fr 1.5fr;
-}
-
-.ad-container-desktop {
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: repeat(auto-fit, 1fr);
-}
-
-.ad-container-mobile {
-    display: none;
-}
-
-.ad-slot-mobile {
-    display: none;
+  background-color: var(--off-main-clr);
 }
 
 .page-header {
-    width: 100vw;
-    position: relative;
-    padding: 33px;
-    display: flex;
-    align-items: center;
-    background-color: var(--main-clr);
-    box-shadow: 0px 2px 15px 0px #000000;
+  width: 100vw;
+  position: relative;
+  padding: 33px;
+  display: flex;
+  align-items: center;
+  background-color: var(--main-clr);
+  box-shadow: 0px 2px 15px 0px #000000;
 }
 
 .page-title {
-    font-size: 3rem;
+  font-size: 3rem;
 }
 
 .no-video-hint {
-    position: absolute;
-    left: 230px;
-    top: 32px;
-    width: 20px;
-    fill: var(--sec-clr);
+  position: absolute;
+  left: 230px;
+  top: 32px;
+  width: 20px;
+  fill: var(--sec-clr);
 }
 
 .no-video-hint:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .tooltip {
-    position: absolute;
-    left: 270px;
-    top: 20px;
-    background-color: var(--off-main-clr);
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 5px 30px, rgba(0, 0, 0, 0.23) 0px 5px 30px;
-    color: var(--sec-clr);
-    width: 200px;
-    padding: 20px;
-    border-radius: 7px;
-    font-size: .8rem;
-    opacity: 0;
-    transition: 0.5s ease;
+  position: absolute;
+  left: 270px;
+  top: 20px;
+  background-color: var(--off-main-clr);
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 5px 30px, rgba(0, 0, 0, 0.23) 0px 5px 30px;
+  color: var(--sec-clr);
+  width: 200px;
+  padding: 20px;
+  border-radius: 7px;
+  font-size: 0.8rem;
+  opacity: 0;
+  transition: 0.5s ease;
 }
 
 .tooltip::before {
-    content: "";
-    position: absolute;
-    left: -26px;
-    top: 5%;
-    transform: rotate(90deg);
-    border: 13px solid;
-    border-color: var(--off-main-clr) #0000 #0000 #0000;
+  content: "";
+  position: absolute;
+  left: -26px;
+  top: 5%;
+  transform: rotate(90deg);
+  border: 13px solid;
+  border-color: var(--off-main-clr) #0000 #0000 #0000;
+}
+
+.content {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 20px;
+  padding: 1rem 0;
+}
+
+.videos-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 70%;
 }
 
 .videos-grid {
-    padding: 30px;
-    display: grid;
-    gap: .5rem;
-    grid-template-columns: repeat(auto-fill, minmax(216px, 1fr));
-    grid-auto-rows: 1fr;
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(216px, 1fr));
+  gap: 20px;
+}
+
+.ads-container {
+  width: 300px;
+  height: 100%;
+}
+
+.ads-container div {
+  width: 100%;
 }
 
 .video {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 20px;
-    flex-direction: column;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  flex-direction: column;
 }
 
 .video-thumbnail {
-    border: var(--sec-clr) 3px solid;
-    border-radius: 2px;
+  border: var(--sec-clr) 3px solid;
+  border-radius: 2px;
+  width: 216px;
 }
 
 .video-thumbnail:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .video-title {
-    font-size: 1rem;
-    text-align: left;
-    font-weight: 600;
-    margin-top: 15px;
-    width: 216px;
+  font-size: 1rem;
+  text-align: left;
+  font-weight: 600;
+  margin-top: 15px;
+  width: 216px;
 }
 
 .video-title:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
-
 
 /* ========== RESPONSIVE DESIGN ========== */
 
 @media screen and (max-width: 1000px) {
-    .nav-items-div {
-        display: none;
-    }
-    .nav {
-        justify-content: space-between;
-    }
+  .nav-items-div {
+    display: none;
+  }
+  .nav {
+    justify-content: space-between;
+  }
 }
 
-@media screen and (max-width: 800px) {
-    .sidebar-search {
-        display: flex;
-    }
-    .content {
-        grid-template-columns: repeat(3, 1fr);
-    }
-    .nav-items-div {
-        display: none;
-    }
-    .search-bar {
-        display: none;
-    }
-    .ad-container-mobile {
-        display: block;
-    }
-    .ad-slot-mobile {
-        display: block;
-    }
+@media screen and (max-width: 700px) {
+  .sidebar-search {
+    display: flex;
+  }
+  .nav-items-div {
+    display: none;
+  }
+  .search-bar {
+    display: none;
+  }
+  .content {
+    justify-content: center;
+    align-items: center;
+  }
+  .ads-container {
+    display: none;
+  }
 }
 
-@media screen and (max-width: 600px) {
-    .content {
-        grid-template-columns: repeat(1, 1fr);
-    }
-    .videos-grid {
-        grid-template-columns: repeat(1, 1fr);
-    }
-    .ad-container-desktop {
-        display: none;
-    }
-    .ad-slot-desktop {
-        display: none;
-    }
-    .ad-container-mobile {
-        display: block;
-    }
-    .ad-slot-mobile {
-        display: block;
-    }
-    .no-video-hint {
-        top: 35px;
-        left: 165px;
-        width: 17px;
-    }
-    .tooltip {
-        left: 140px;
-        top: 70px;
-    }
-    .tooltip::before {
-        top: -25px;
-        left: 20px;
-        transform: rotate(180deg);
-    }
-    .page-title {
-        font-size: 2rem;
-    }
+@media screen and (max-width: 500px) {
+  .no-video-hint {
+    top: 35px;
+    left: 165px;
+    width: 17px;
+  }
+  .tooltip {
+    left: 140px;
+    top: 70px;
+  }
+  .tooltip::before {
+    top: -25px;
+    left: 20px;
+    transform: rotate(180deg);
+  }
+  .page-title {
+    font-size: 2rem;
+  }
+  .video-thumbnail {
+    width: 144px;
+  }
+  .video-title {
+    font-size: 0.7rem;
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 350px) {
+  .video-thumbnail {
+    width: 96px;
+  }
+  .video-title {
+    font-size: 0.5rem;
+    text-align: center;
+  }
 }
